tests/harness/errors/109_unknown_arg.eu
# Mistake: passing an unrecognised option to parse-args
main: ["--unknown-flag"] parse-args({})
